2002-11-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* components/text/Makefile.am:
	* components/throbber/Makefile.am:
	* components/tree/Makefile.am:
	Add CLEANFILES so that make clean deletes $(server_DATA) and
	$(server_DATA).in

	This change should have been made on September 20th

	* libnautilus-private/nautilus-icon-container.c (button_press_event):
	Get double_click_time from GtkSettings property instead of using
	hardcoded value.

	This fixes bug #92372.

2002-11-13  Diego Gonzalez  <diego@pemas.net>

	* libnautilus-private/nautilus-theme.[c-h]:
	(nautilus_theme_set_theme), (nautilus_theme_make_preview_pixbuf),
	(nautilus_theme_for_each_theme), (nautilus_theme_remove_user_theme),
	(nautilus_theme_install_user_theme)

	* libnautilus-private/nautilus-theme.c:
	(load_theme_document), (vfs_file_exists), (theme_get_property),
	(theme_get_name_property), (theme_get_description_property),
	(theme_list_prepend), (has_theme_xml), (theme_get_themes_for_location),
	(theme_get_builtin_themes), (theme_get_user_themes),
	(theme_list_invoke_callback), (attributes_free)

	Theme cleanup, remove all these functions since they are no longer
	used.

2002-11-10  James Willcox  <jwillcox@gnome.org>

	* docs/nautilus-context-menus.txt:
	* libnautilus-private/nautilus-mime-actions.c:
	(nautilus_mime_get_popup_components_for_file):

	Fixed a slight bug in the context menu query code, and added a bit of
	documentation.

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-08  James Willcox  <jwillcox@gnome.org>

	* components/image_properties/nautilus-image-properties-view.c:
	(get_property), (set_property),
	(nautilus_image_properties_view_init):
	* components/image_properties/nautilus-image-properties-view.h:
	* components/notes/nautilus-notes.c: (set_bonobo_properties),
	(make_notes_view):
	* libnautilus-private/nautilus-mime-actions.c:
	(nautilus_mime_get_property_components_for_file):