@@ -1,3 +1,9 @@
+2002-11-19  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	(clear_bonobo_pages) Don't reference wrong notebook pages
+	 (properties_window_file_changed_callback) correct strcmp comparison
+
 2002-11-19  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* components/text/Makefile.am:
